gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.13.4-no-runs.sarif
{ "version": "2.1.0" } // { dg-error "expected sarifLog object to have a 'runs' property \\\[SARIF v2.1.0 ยง3.13.4\\\]" }

/* { dg-begin-multiline-output "" }
    1 | { "version": "2.1.0" }
      | ^~~~~~~~~~~~~~~~~~~~~~
   { dg-end-multiline-output "" } */
